# redhat-devops-workshop

./: .gitignore  .gitlab-ci.yml  README.md  postgres.py  pyproject.toml  requirements-classic.txt  requirements-dev.txt  requirements-new.txt  requirements.txt
api/: Dockerfile  api.py  call_endpoint.py  download_model.py  get_example_data.py  inference.py  inference_single_model.py  requirements.in  requirements.txt
api/manual-deployment/: deployment.yaml  service.yaml  virtualservice.yaml
gitlab-cicd/: helm_deployment.yaml  minimal-gitlab-ci.yml  substitute_env_vars.sh
helm-deployments/: Chart.yaml  values.yaml
helm-deployments/charts/api/: Chart.yaml  values.yaml
helm-deployments/charts/api/templates/: authorizationpolicy.yml  deployment.yml  docs_virtualservice.yml  hpa.yml  service.yml  virtualservice.yml
helm-deployments/charts/streamlit/: Chart.yaml  values.yaml
helm-deployments/charts/streamlit/templates/: deployment.yml  hpa.yml  service.yml  virtualservice.yml
image_test/: Containerfile-with-nano  requirements.txt
streamlit/: Dockerfile  requirements.in  requirements.txt
streamlit/gui-test-tool/: gui_testing.py
streamlit/main/: app.py
streamlit/manual-deployment/: deployment.yaml  service.yaml  virtualservice.yaml
test/: test_api.py
